--- a/minggu1/buatTabel.html
+++ b/minggu1/buatTabel.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            .baris1 {
+                vertical-align: bottom;
+                text-align: right;
+            }
+        </style>
         <title>
             Membuat Tabel
         </title>
     </head>
     <body>
-        <table border="1", height="100", width="40", cellpadding="20">
+        <table border="1", height="100%", width="40%", cellpadding="20", cellspacing="5">
             <tr>
-                <td>Ini baris pertama kolom pertama</td>
+                <td class="baris1" rowspan="2">
+                    <font face="courier">Ini baris pertama kolom pertama</font></td>
                 <td>Ini baris pertama kolom kedua</td>
+                <td>tambah 1 kolom</td>
             </tr>
             <tr>
-                <td>Ini baris kedua kolom pertama</td>
+                <td>Ini juga tambah 1 kolom</td>
+                <td colspan="2">Ini sekarang menjadi gabungan 2 kolom</td>
             </tr>
         </table>
     </body>
