Jobsheet Minggu 2 - Praktikum 9 | Memformat Teks dengan CSS

--- a/minggu2/index.html
+++ b/minggu2/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head> 
-        <title>HyperLink CSS</title>
-        <link rel="stylesheet" type="text/css" href="styleLink.css">
-    </head>
+    <head>
+        <title>Format Text CSS</title>
+        <link rel="stylesheet" type="text/css" href="styleText.css">
 
+    </head>
     <body>
-        <a class="link" href="http://www.polinema.ac.id" target="_blank">Klik di Sini</a>    
+        <p class="tulisan_warna">Mengatur Format dengan CSS</p>
+        <p class="par1">
+            Lorem ipsum dolor, 
+            sit amet consectetur adipisicing elit. 
+            Quis, labore, placeat saepe autem adipisci 
+            perferendis blanditiis hic nulla molestias 
+            commodi deserunt, corporis perspiciatis ab veniam 
+            eaque nisi voluptatibus ipsa excepturi.
+
+            Lorem ipsum dolor, 
+            sit amet consectetur adipisicing elit. 
+            Quis, labore, placeat saepe autem adipisci 
+            perferendis blanditiis hic nulla molestias 
+            commodi deserunt, corporis perspiciatis ab veniam 
+            eaque nisi voluptatibus ipsa excepturi.
+        </p>
     </body>
 </html>
