Jobsheet Minggu 2 - Praktikum 11 | Menggunakan Float

--- a/minggu2/index.html
+++ b/minggu2/index.html
@@ -1,95 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Position CSS</title>
-    <link rel="stylesheet" type="text/css" href="stylePosition.css" />
-  </head>
-  <body>
-    <h2>Position: Static</h2>
+    <head>
+        <title>Menggunakan Float</title>
+        <link rel="stylesheet"  type="text/css" href="styleFloat.css">
+    </head>
+    <body>
+        <h2>Float Kiri</h2>
+        <div class="float1">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea expedita minus hic excepturi sint illum atque dolor reprehenderit autem laborum debitis, sunt quam accusamus perferendis deleniti facere. Iure, ratione eum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis autem natus magnam magni consectetur maxime, repudiandae dignissimos aspernatur earum quas dolores ipsa ipsum beatae nostrum fugiat omnis quaerat dolor sint? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium quasi, animi asperiores accusamus rerum cupiditate? At laboriosam non minima eos laborum tempora architecto earum voluptatum, repudiandae corrupti qui dolor.
+                <img class="gambar" src="../image/bunga2.jpg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eum necessitatibus, delectus rerum veniam hic totam vero veritatis? In quis hic doloremque quasi officiis quam fugiat eos, excepturi laboriosam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat facilis assumenda itaque nemo sequi tempore beatae tenetur, similique cupiditate explicabo quos necessitatibus corrupti fugit aliquid error facere dolorum. Saepe, reiciendis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum ipsam debitis obcaecati provident tempore at, quidem mollitia ut perferendis aspernatur, iste eum accusamus ex quae repellat ipsa dignissimos. Cumque, voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem maiores in illum rerum dolore aliquid quas eius illo sapiente suscipit, eveniet expedita distinctio deleniti voluptatum quidem animi autem doloremque sint?
+                
+            </p>
+        </div>
 
-    <p>
-      Position static digunakan untuk mengatur element menjadi statis secara
-      default. Elemen akan mengikuti posisi normal secara default, elemen tidak
-      dipengaruhi oleh properti seperti top, bottom, left dan right.
-    </p>
-
-    <div class="static">Elemen ini diatur menggunakan posisi: static;</div>
-
-    <br /><br /><br /><br />
-
-    <h2>Position: Relative</h2>
-
-    <p>
-      Sebuah element HTML yang menggunakan position relative akan terletak pada
-      posisi normal. Mengatur properti atas, kanan, bawah, dan kiri dari elemen
-      yang diposisikan dengan “relatif” akan membuatnya jauh dari posisi
-      normalnya. Konten lain tidak akan disesuaikan agar sesuai dengan celah
-      yang ditinggalkan oleh elemen tersebut.
-    </p>
-
-    <div class="relative">Elemen ini diatur menggunakan posisi : relative;</div>
-
-    <br /><br /><br /><br />
-
-    <h2>Position: Fixed</h2>
-
-    <p>
-      Sebuah element HTML yang di setting dengan position fixed akan memiliki
-      sifat tetap, tanpa ada perubahan bahkan jika halaman website di scroll.
-      Berlaku pengaturan left, bottom, top dan right pada position fixed:
-    </p>
-
-    <div class="fixed">Elemen ini diatur menggunakan posisi: fixed;</div>
-
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
-    <h2>Position: Absolute</h2>
-
-    <p>
-      Element HTML yang menggunakan position absolute akan diposisikan relatif
-      dengan elemen lain yang mendahuluinya yang terdekat, bukan relatif
-      terhadap layar secara normal.
-    </p>
-
-    <div class="relative1">
-        Elemen ini diatur menggunakan posisi: relative;
-    <div class="absolute">
-        Elemen ini diatur menggunakan posisi: absolute;
-    </div>
-    </div>
-
-    <br /><br /><br /><br /><br /><br /><br />
-
-    <h2>Position: Sticky</h2>
-
-    <p>
-      Cobalah untuk <b>scroll</b> untuk mengetahui bagaimana posisi sticky
-      bekerja.
-    </p>
-    <p>Catatan: IE/Edge 15 dan versi yang lebih lama tidak mendukung sticky.</p>
-
-    <div class="sticky">Hola Aku adalah sticky!</div>
-
-    <div style="padding-bottom: 2000px">
-      <p>
-        Dalam contoh ini, elemen sticky menempel pada posisi paling atas halaman
-        (top:0), ketika mencapai posisi scrollnya.
-      </p>
-      <p>Cobalah untuk melakukan scroll.</p>
-      <p>
-        Cobalah untuk melakukan scroll... Lorem ipsum dolor sit amet, illum
-        definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-        quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
-        laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
-        molestiae voluptatibus.
-      </p>
-      <p>
-        Cobalah untuk melakukan scroll... Lorem ipsum dolor sit amet, illum
-        definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-        quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert
-        laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no
-        molestiae voluptatibus.
-      </p>
-    </div>
-  </body>
+    </body>
 </html>
