Jobsheet Minggu 2 - Praktikum 13 | Tampilan Sebaris

--- a/minggu2/csslayouting.html
+++ b/minggu2/csslayouting.html
@@ -6,12 +6,12 @@
             img{
                 width: 200px;
             }
-            .navigasi{
+            /* .navigasi{
                 background-color: pink;
             }
             .main{
                 background-color: lightgreen;
-            }
+            } */
         </style>
     </head>
     <body>
@@ -23,7 +23,8 @@
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
-            <a href="#">Link 4</a>    
+            <a href="#">Link 4</a>  
+            <a href="#">Link 5</a>    
         </div>
         <div class="main">
             <h2>TEKNIK INFORMATIKA</h2>
