Jobsheet Minggu 2 - Praktikum 14 | Tampilan Blok Sebaris

--- a/minggu2/csslayouting.html
+++ b/minggu2/csslayouting.html
@@ -6,12 +6,19 @@
             img{
                 width: 200px;
             }
+            a {
+                background-color: pink;
+                width: 200px;
+                height: 200px;
+                display: inline-block;
+            }
             /* .navigasi{
                 background-color: pink;
             }
             .main{
                 background-color: lightgreen;
             } */
+
         </style>
     </head>
     <body>
