--- a/minggu2/csslayouting.html
+++ b/minggu2/csslayouting.html
@@ -8,16 +8,17 @@
             }
             a {
                 background-color: pink;
-                width: 200px;
-                height: 200px;
-                display: inline-block;
             }
-            /* .navigasi{
-                background-color: pink;
-            }
-            .main{
+            /* h1, h2, p {
                 background-color: lightgreen;
             } */
+            .main{
+                width: 600px;
+                background-color: lightgreen;
+            }
+            .main h2 {
+                background-color: pink;
+            }
 
         </style>
     </head>
