--- a/minggu6/container.html
+++ b/minggu6/container.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1">
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
     </head>
     <body>
-        <h1>Selamat Datang di Website "Leon"</h1>
-        <p>Saya sedang belajar Bootstrap</p>
+        <div class="container-fluid">
+            <h1>Selamat Datang di Website "Leon"</h1>
+            <p>Saya sedang belajar Bootstrap</p>
+        </div>
+
     </body>
 </html>
