--- a/UTS/home.html
+++ b/UTS/home.html
@@ -43,7 +43,7 @@
 
     <section class="about">
       <div class="about-text">
-        <h2>Home - Laundry XYZ</h2>
+        <h2>Tentang Laundry XYZ</h2>
         <p>
           Laundry XYZ adalah perusahaan yang berdiri baru hari ini. Kami fokus
           pada inovasi layanan laundry untuk membantu UMKM, dengan menyediakan
