--- a/UTS/login.html
+++ b/UTS/login.html
@@ -13,22 +13,14 @@ if (isset($_SESSION['username'])) {
     <title>Login - Laundry XYZ</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .error-message {
+        .error-container {
             color: red;
+            text-align: center;
             font-size: 14px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             display: none; 
         }
-        .error-container {
-            background-color: aliceblue;
-            border-radius: 8px;
-            box-shadow: 0 0 20px #333;
-            max-width: 180px;
-            text-align: center;
-            margin: 15px 20px 15px 75px;
-            color: red;
-            font-size: 14px;
-        }
+
     </style>
 </head>
 <body>
@@ -39,12 +31,10 @@ if (isset($_SESSION['username'])) {
 
             <div class="input-box">
                 <input type="text" id="username" name="username" placeholder="Username">
-                <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
                 <input type="password" id="password" name="password" placeholder="Password">
-                <i class='bx bxs-lock-alt'></i>
             </div>
 
             <div id="errorContainer" class="error-container"></div>
@@ -64,12 +54,9 @@ if (isset($_SESSION['username'])) {
 
             let errorMessages = [];
 
-            if (username === '') {
-                errorMessages.push('Username harus terisi.');
-            }
-            if (password === '') {
-                errorMessages.push('Password harus terisi.');
-            } else if (password.length > 6) {
+            if (username === '' || password === '') {
+                errorMessages.push('Username atau password harus diisi.');
+            }else if (password.length > 6) {
                 errorMessages.push('Password maksimal 6 karakter.');
             } else if (!/[a-z]/.test(password) || !/[A-Z]/.test(password)) {
                 errorMessages.push('Password harus terdiri dari huruf besar dan kecil.');
